<?xml version="1.0"?>
<package>
  <name>optris_drivers</name>
  <version>0.0.0</version>
  <description>

     ROS nodes wrapping the binary driver for Optris thermal imager devices.

  </description>
  <maintainer email="not@given.yet">Stefan May(Nuremberg Institute of Technology Georg Simon Ohm - www.th-nuernberg.de)</maintainer>

  <author>Stefan May (Nuremberg Institute of Technology Georg Simon Ohm - www.th-nuernberg.de)</author>
  <author>64-Bit platform supported by Fraunhofer IPA (www.ipa.fraunhofer.de)</author>
  <author>ROS hydro migration by Christopher-Eyk Hrabia (DAI-Labor, Technische Universität Berlin)</author>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/optris_drivers</url>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- build dependencies -->
  <build_depend>roscpp</build_depend>
  <build_depend>rosconsole</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>pthread</build_depend>
  <build_depend>libudev-dev</build_depend>

  <!-- runtime dependencies -->
  <run_depend>roscpp</run_depend>
  <run_depend>rosconsole</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>pthread</run_depend>
  <run_depend>libudev-dev</run_depend>

</package>


